# tsan_actions

./: README.md  db.sqlite3  pyproject.toml  setup.cfg
config/: .env.example  config.py
myproject/: settings.py  urls.py
myproject/apps/genius/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  views.py
myproject/apps/genius/management/: __init__.py  commands.py
myproject/settings/components/: database.py
myproject/settings/environments/: development.py
tests/: conftest.py  test_api.py
