[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Anastasiya Myasnikova <nastabutcher.myasn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2 = "^2.9.6"
dotenv-python = "^0.0.1"
env = "^0.1.0"
django-orm = "^2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
