[tool.poetry]
name = "pythonproject9"
version = "0.1.0"
description = ""
authors = ["Anastasiya Myasnikova <nastabutcher.myasn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2 = "^2.9.6"
dotenv-python = "^0.0.1"
env = "^0.1.0"
django-orm = "^2.0.5"
djangorestframework = "^3.14.0"
django-rest-swagger = "^2.2.0"
pytest-django = "^4.5.2"
flake8 = "^6.0.0"
isort = "^5.12.0"
drf-yasg = "^1.21.5"
pyrogram = "^2.0.106"
djangorestframework-simplejwt = "^5.2.2"
django-crispy-forms = "^2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
